add Context, adjust header to be sticky and smooth scroll, adjust Home page, and styles, start work on changing footer

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
 html {
   @apply font-sans;
 }
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
